Add scripts and enhance Maven config for JavaFX app
Added launch-app.sh and run-jar.sh scripts for easier running of the JavaFX HelloWorld application. Updated README with detailed build and run instructions. Enhanced pom.xml with plugins for JAR manifest, dependency copying, and native packaging via jpackage.